Improving both Mesh and Elem

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -368,6 +368,8 @@ INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/02_mesh/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/02_mesh/00_geom_elements/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/02_mesh/00_single_level/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/02_mesh/00_single_level/01_input/)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/02_mesh/00_single_level/01_input/01_from_external_file/)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/02_mesh/00_single_level/01_input/02_from_implemented_code/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/02_mesh/00_single_level/02_partitioning/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/02_mesh/00_single_level/03_refinement/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/02_mesh/01_multiple_levels/)
