following the changes of Coupled Biharmonic from the main file and organized the sandbox folders

--- a/applications/zzz_sandbox/CMakeLists.txt
+++ b/applications/zzz_sandbox/CMakeLists.txt
@@ -2,12 +2,7 @@ CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
   
 
   ADD_SUBDIRECTORY(./class_2021_2022/)
-  
-
-  ADD_SUBDIRECTORY(./karthik_poisson/)
-  ADD_SUBDIRECTORY(./Karthik_coupled_biharmonic/)
-  ADD_SUBDIRECTORY(./Karthik_uncoupled_biharmonic/)
-
+  ADD_SUBDIRECTORY(./Karthik/)
 
   ADD_SUBDIRECTORY(./shankar/)
   ADD_SUBDIRECTORY(./shankar_biharmonic_coupled_systems/)
