Reorganized LinEq and LinEqSolver

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -391,6 +391,8 @@ INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/algebra/00_vectors/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/algebra/01_matrices/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/algebra/02_preconditioners/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/algebra/03_solvers_with_preconditioner/)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/algebra/03_solvers_with_preconditioner/petsc_asm/)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/algebra/03_solvers_with_preconditioner/petsc_field_split/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/ism/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/optimal_control/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/physics/)
