Isolating all things depending on 1 GeomEl, remove any Mesh dependence now

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -364,8 +364,12 @@ INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/00_utils/function_parser/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/00_utils/math/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/00_utils/parallel/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/01_problem/)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/02_geom_elements/)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/02_geom_elements/00_definition/)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/02_geom_elements/01_fe/)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/02_geom_elements/02_quadrature/)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/02_geom_elements/03_fe_evaluations_at_quadrature/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/02_mesh/)
-INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/02_mesh/00_geom_elements/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/02_mesh/00_single_level/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/02_mesh/00_single_level/01_input/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/02_mesh/00_single_level/01_input/01_from_external_file/)
@@ -374,9 +378,6 @@ INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/02_mesh/00_single_level/02_partition
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/02_mesh/00_single_level/03_refinement/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/02_mesh/01_multiple_levels/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/02_mesh/gencase/)
-INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/02b_geom_elements_fe/)
-INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/02c_geom_elements_quadrature/)
-INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/02d_geom_elements_fe_evaluations_at_quadrature/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/03_solution/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/03_solution/00_single_level/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/03_solution/01_multiple_levels/)
