--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -59,6 +59,12 @@ SET(femus_src
 07_solution/01_multiple_levels/01_output/VTKWriter.cpp
 07_solution/01_multiple_levels/01_output/GMVWriter.cpp
 07_solution/01_multiple_levels/01_output/XDMFWriter.cpp
+08_algebra_dependent_on_Mesh_and_Solution/03_solvers_with_preconditioner/LinearEquation.cpp
+08_algebra_dependent_on_Mesh_and_Solution/03_solvers_with_preconditioner/LinearEquationSolver.cpp
+08_algebra_dependent_on_Mesh_and_Solution/03_solvers_with_preconditioner/LinearEquationSolverPetsc.cpp
+08_algebra_dependent_on_Mesh_and_Solution/03_solvers_with_preconditioner/petsc_asm/LinearEquationSolverPetscAsm.cpp
+08_algebra_dependent_on_Mesh_and_Solution/03_solvers_with_preconditioner/petsc_field_split/FieldSplitTree.cpp
+08_algebra_dependent_on_Mesh_and_Solution/03_solvers_with_preconditioner/petsc_field_split/LinearEquationSolverPetscFieldSplit.cpp
 08_equations/00_stationary/LinearImplicitSystem.cpp
 08_equations/00_stationary/MonolithicFSINonLinearImplicitSystem.cpp
 08_equations/00_stationary/NonLinearImplicitSystem.cpp
@@ -75,24 +81,18 @@ SET(femus_src
 08_equations/assemble/TimeLoop.cpp
 09_optimal_control/00_cost_functional.cpp
 09_optimal_control/NonLinearImplicitSystemWithPrimalDualActiveSetMethod.cpp
-algebra/00_vectors/DenseVectorBase.cpp
-algebra/00_vectors/NumericVector.cpp
-algebra/00_vectors/PetscVector.cpp
-algebra/01_matrices/DenseMatrixBase.cpp
-algebra/01_matrices/DenseMatrix.cpp
-algebra/01_matrices/DenseSubmatrix.cpp
-algebra/01_matrices/PetscMatrix.cpp
-algebra/01_matrices/SparseMatrix.cpp
-algebra/01_matrices/Graph.cpp
-algebra/02_preconditioners/PetscPreconditioner.cpp
-algebra/02_preconditioners/Preconditioner.cpp
-algebra/03_solvers_with_preconditioner/LinearEquation.cpp
-algebra/03_solvers_with_preconditioner/LinearEquationSolver.cpp
-algebra/03_solvers_with_preconditioner/LinearEquationSolverPetsc.cpp
-algebra/03_solvers_with_preconditioner/petsc_asm/LinearEquationSolverPetscAsm.cpp
-algebra/03_solvers_with_preconditioner/petsc_field_split/FieldSplitTree.cpp
-algebra/03_solvers_with_preconditioner/petsc_field_split/LinearEquationSolverPetscFieldSplit.cpp
-algebra/SlepcSVD.cpp
+03_algebra/00_vectors/DenseVectorBase.cpp
+03_algebra/00_vectors/NumericVector.cpp
+03_algebra/00_vectors/PetscVector.cpp
+03_algebra/01_matrices/DenseMatrixBase.cpp
+03_algebra/01_matrices/DenseMatrix.cpp
+03_algebra/01_matrices/DenseSubmatrix.cpp
+03_algebra/01_matrices/PetscMatrix.cpp
+03_algebra/01_matrices/SparseMatrix.cpp
+03_algebra/01_matrices/Graph.cpp
+03_algebra/02_preconditioners/PetscPreconditioner.cpp
+03_algebra/02_preconditioners/Preconditioner.cpp
+03_algebra/SlepcSVD.cpp
 ism/Marker.cpp
 ism/PolynomialBases.cpp
 ism/Line.cpp
