--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -359,8 +359,9 @@ INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/00_utils/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/00_utils/00_application_initialization/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/00_utils/01_application_file_handling/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/00_utils/data_types/)
-INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/00_utils/input_parser/)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/00_utils/defaults/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/00_utils/function_parser/)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/00_utils/input_parser/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/00_utils/math/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/00_utils/parallel/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/01_problem/)
@@ -375,6 +376,10 @@ INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/02_reference_geom_elements/01_fe/2d/
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/02_reference_geom_elements/01_fe/3d/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/02_reference_geom_elements/02_quadrature/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/02_reference_geom_elements/03_fe_evaluations_at_quadrature/)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/03_algebra/)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/03_algebra/00_vectors/)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/03_algebra/01_matrices/)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/03_algebra/02_preconditioners/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/06_mesh/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/06_mesh/00_single_level/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/06_mesh/00_single_level/01_input/)
@@ -389,18 +394,14 @@ INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/07_solution/00_single_level/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/07_solution/01_multiple_levels/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/07_solution/01_multiple_levels/01_output/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/07_solution/01_multiple_levels/02_FE_convergence/)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/08_algebra_dependent_on_Mesh_and_Solution/03_solvers_with_preconditioner/)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/08_algebra_dependent_on_Mesh_and_Solution/03_solvers_with_preconditioner/petsc_asm/)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/08_algebra_dependent_on_Mesh_and_Solution/03_solvers_with_preconditioner/petsc_field_split/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/08_equations/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/08_equations/00_stationary/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/08_equations/01_time_dependent/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/08_equations/assemble/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/09_optimal_control/)
-INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/algebra/)
-INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/algebra/00_vectors/)
-INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/algebra/01_matrices/)
-INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/algebra/02_preconditioners/)
-INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/algebra/03_solvers_with_preconditioner/)
-INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/algebra/03_solvers_with_preconditioner/petsc_asm/)
-INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/algebra/03_solvers_with_preconditioner/petsc_field_split/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/ism/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/physics/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/uq/)
