Cleaned GeomEl includes, and reordered various vectors/matrices. Now gather Problem components

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -380,6 +380,7 @@ INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/03_algebra/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/03_algebra/00_vectors/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/03_algebra/01_matrices/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/03_algebra/02_preconditioners/)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/03_algebra_only_mpi/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/06_mesh/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/06_mesh/00_single_level/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/06_mesh/00_single_level/01_input/)
