Started Prob components

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -365,6 +365,7 @@ INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/00_utils/input_parser/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/00_utils/math/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/00_utils/parallel/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/01_problem/)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/01_problem_components/physics/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/02_reference_geom_elements/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/02_reference_geom_elements/00_definition/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/02_reference_geom_elements/00_definition/1d/)
@@ -404,7 +405,6 @@ INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/08_equations/01_time_dependent/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/08_equations/assemble/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/09_optimal_control/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/ism/)
-INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/physics/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/uq/)
 INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/include/)
 
