Single header for Types

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,16 +8,15 @@ PROJECT(femus)
 
 SET(femus_src 
 00_utils/00_application_initialization/FemusInit.cpp
-00_utils/function_parser/FunctionBase.cpp
-00_utils/function_parser/ParsedFunction.cpp
-01_problem/MultiLevelProblem.cpp
-01_problem_components/physics/Fluid.cpp
-01_problem_components/physics/Material.cpp
-01_problem_components/physics/Parameter.cpp
-01_problem_components/physics/Solid.cpp
-01_problem_components/application_file_handling/Files.cpp
-01_problem_components/file_input_parser/InputParser.cpp
-01_problem_components/file_input_parser/JsonInputParser.cpp
+00_utils/math/function_parser/FunctionBase.cpp
+00_utils/math/function_parser/ParsedFunction.cpp
+01_materials/Material.cpp
+01_materials/Fluid.cpp
+01_materials/Solid.cpp
+01_materials/Parameter.cpp
+01_file_handling/application_file_handling/Files.cpp
+01_file_handling/file_input_parser/InputParser.cpp
+01_file_handling/file_input_parser/JsonInputParser.cpp
 02_reference_geom_elements/00_definition/GeomElemBase.cpp
 02_reference_geom_elements/00_definition/1d/GeomElemEdge2.cpp
 02_reference_geom_elements/00_definition/1d/GeomElemEdge3.cpp
@@ -54,6 +53,7 @@ SET(femus_src
 03_algebra/SlepcSVD.cpp
 03_algebra_only_mpi/MyMatrix.cpp
 03_algebra_only_mpi/MyVector.cpp
+05_problem/MultiLevelProblem.cpp
 06_mesh/00_single_level/Elem.cpp
 06_mesh/00_single_level/Mesh.cpp
 06_mesh/00_single_level/01_input/01_from_external_file/GambitIO.cpp
@@ -75,12 +75,12 @@ SET(femus_src
 07_solution/01_multiple_levels/01_output/VTKWriter.cpp
 07_solution/01_multiple_levels/01_output/GMVWriter.cpp
 07_solution/01_multiple_levels/01_output/XDMFWriter.cpp
-08_algebra_dependent_on_Mesh_and_Solution/03_solvers_with_preconditioner/LinearEquation.cpp
-08_algebra_dependent_on_Mesh_and_Solution/03_solvers_with_preconditioner/LinearEquationSolver.cpp
-08_algebra_dependent_on_Mesh_and_Solution/03_solvers_with_preconditioner/LinearEquationSolverPetsc.cpp
-08_algebra_dependent_on_Mesh_and_Solution/03_solvers_with_preconditioner/petsc_asm/LinearEquationSolverPetscAsm.cpp
-08_algebra_dependent_on_Mesh_and_Solution/03_solvers_with_preconditioner/petsc_field_split/FieldSplitTree.cpp
-08_algebra_dependent_on_Mesh_and_Solution/03_solvers_with_preconditioner/petsc_field_split/LinearEquationSolverPetscFieldSplit.cpp
+08_algebra_dependent_on_Mesh_and_Solution_but_independent_of_Systems/03_solvers_with_preconditioner/LinearEquation.cpp
+08_algebra_dependent_on_Mesh_and_Solution_but_independent_of_Systems/03_solvers_with_preconditioner/LinearEquationSolver.cpp
+08_algebra_dependent_on_Mesh_and_Solution_but_independent_of_Systems/03_solvers_with_preconditioner/LinearEquationSolverPetsc.cpp
+08_algebra_dependent_on_Mesh_and_Solution_but_independent_of_Systems/03_solvers_with_preconditioner/petsc_asm/LinearEquationSolverPetscAsm.cpp
+08_algebra_dependent_on_Mesh_and_Solution_but_independent_of_Systems/03_solvers_with_preconditioner/petsc_field_split/FieldSplitTree.cpp
+08_algebra_dependent_on_Mesh_and_Solution_but_independent_of_Systems/03_solvers_with_preconditioner/petsc_field_split/LinearEquationSolverPetscFieldSplit.cpp
 08_equations/00_stationary/LinearImplicitSystem.cpp
 08_equations/00_stationary/MonolithicFSINonLinearImplicitSystem.cpp
 08_equations/00_stationary/NonLinearImplicitSystem.cpp
