Moving default params to their respective classes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -360,12 +360,13 @@ INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/00_utils/00_application_initializati
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/00_utils/00_parallel/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/00_utils/01_defaults/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/00_utils/data_types/)
-INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/00_utils/math/)
-INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/00_utils/math/function_parser/)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/00_math/)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/00_math/function_parser/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/01_materials/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/01_parameters/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/01_file_handling/application_file_handling/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/01_file_handling/file_input_parser/)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/01_file_handling/command_line_input_parser/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/02_reference_geom_elements/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/02_reference_geom_elements/00_definition/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/02_reference_geom_elements/00_definition/1d/)
@@ -385,16 +386,20 @@ INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/03_algebra_only_mpi/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/05_problem/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/06_mesh/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/06_mesh/00_single_level/)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/06_mesh/00_single_level/00_definition/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/06_mesh/00_single_level/01_input/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/06_mesh/00_single_level/01_input/01_from_external_file/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/06_mesh/00_single_level/01_input/02_from_implemented_code/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/06_mesh/00_single_level/02_partitioning/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/06_mesh/00_single_level/03_refinement/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/06_mesh/01_multiple_levels/)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/06_mesh/01_multiple_levels/00_definition/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/06_mesh/gencase_deprecated/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/07_solution/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/07_solution/00_single_level/)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/07_solution/00_single_level/00_definition/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/07_solution/01_multiple_levels/)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/07_solution/01_multiple_levels/00_definition/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/07_solution/01_multiple_levels/01_output/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/07_solution/01_multiple_levels/02_FE_convergence/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/08_algebra_dependent_on_Mesh_and_Solution_but_independent_of_Systems/03_solvers_with_preconditioner/)
