Fixed Doxygen options to get the config include

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -377,11 +377,16 @@ INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/02_reference_geom_elements/01_fe/2d/
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/02_reference_geom_elements/01_fe/3d/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/02_reference_geom_elements/02_quadrature/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/02_reference_geom_elements/03_fe_evaluations_at_quadrature/)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/03_algebra_dense/)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/03_algebra_dense/00_vectors/)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/03_algebra_dense/01_matrices/)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/03_algebra_only_mpi/)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/03_algebra_only_mpi/00_vectors/)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/03_algebra_only_mpi/01_matrices/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/03_algebra/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/03_algebra/00_vectors/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/03_algebra/01_matrices/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/03_algebra/02_preconditioners/)
-INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/03_algebra_only_mpi/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/05_problem/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/06_mesh/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/06_mesh/00_single_level/)
