Almost managed to isolate FSI from Transient, only one templating issue

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -353,6 +353,9 @@ INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/08_equations/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/08_equations/00_stationary/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/08_equations/01_time_dependent/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/08_equations/assemble/)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/08_fsi/)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/08_fsi/00_stationary/)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/08_fsi/01_time_dependent/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/09_optimal_control/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/ism/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/uq/)
