Reordered all quadrature

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -316,6 +316,10 @@ INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/02_reference_geom_elements/01_fe/1d/
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/02_reference_geom_elements/01_fe/2d/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/02_reference_geom_elements/01_fe/3d/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/02_reference_geom_elements/02_quadrature/)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/02_reference_geom_elements/02_quadrature/0d/)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/02_reference_geom_elements/02_quadrature/1d/)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/02_reference_geom_elements/02_quadrature/2d/)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/02_reference_geom_elements/02_quadrature/3d/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/02_reference_geom_elements/03_fe_evaluations_at_quadrature/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/03_algebra_dense/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/03_algebra_dense/00_vectors/)
