--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -304,8 +304,8 @@ INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/00_file_handling/runtime_input_parsi
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/00_file_handling/runtime_input_parsing/command_line/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/01_materials/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/01_parameters/)
-INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/02_math/)
-INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/02_math/function_parser/)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/02_calculus/)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/02_calculus/function_parser/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/02_reference_geom_elements/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/02_reference_geom_elements/00_definition/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/02_reference_geom_elements/00_definition/1d/)
