Removed and renamed apps

--- a/applications/PCFieldSplit/CMakeLists.txt
+++ b/applications/PCFieldSplit/CMakeLists.txt
@@ -16,12 +16,13 @@ ADD_SUBDIRECTORY(ex14/)
 ADD_SUBDIRECTORY(ex21/)
 ADD_SUBDIRECTORY(ex21_1/)
 ADD_SUBDIRECTORY(ex21_2/)
-ADD_SUBDIRECTORY(ex22/)
+
 ADD_SUBDIRECTORY(ex22_1/)
 ADD_SUBDIRECTORY(ex23/)
 ADD_SUBDIRECTORY(ex24/)
 ADD_SUBDIRECTORY(ex25/)
-ADD_SUBDIRECTORY(ex30/)
+
+ADD_SUBDIRECTORY(ex30_opt_control/)
 
 ADD_SUBDIRECTORY(ex40/)
 ADD_SUBDIRECTORY(ex41/)
