Isolated all time-dep pc apps

--- a/applications/PCFieldSplit/CMakeLists.txt
+++ b/applications/PCFieldSplit/CMakeLists.txt
@@ -4,8 +4,6 @@ get_filename_component(APP_FOLDER_NAME_PARENT ${CMAKE_CURRENT_LIST_DIR} NAME)
 
 ADD_SUBDIRECTORY(ex1/)
 
-ADD_SUBDIRECTORY(ex7/)
-ADD_SUBDIRECTORY(ex8/)
 ADD_SUBDIRECTORY(ex10/)
 ADD_SUBDIRECTORY(ex11/)
 ADD_SUBDIRECTORY(ex11_1/)
@@ -13,14 +11,19 @@ ADD_SUBDIRECTORY(ex11_2/)
 ADD_SUBDIRECTORY(ex12/)
 ADD_SUBDIRECTORY(ex13/)
 ADD_SUBDIRECTORY(ex14/)
+
+# Time dependent - BEGIN
+ADD_SUBDIRECTORY(ex20_1/)
+ADD_SUBDIRECTORY(ex20_2/)
 ADD_SUBDIRECTORY(ex21/)
 ADD_SUBDIRECTORY(ex21_1/)
 ADD_SUBDIRECTORY(ex21_2/)
-
 ADD_SUBDIRECTORY(ex22_1/)
 ADD_SUBDIRECTORY(ex23/)
 ADD_SUBDIRECTORY(ex24/)
 ADD_SUBDIRECTORY(ex25/)
+# Time dependent - END
+
 
 ADD_SUBDIRECTORY(ex30_opt_control/)
 
