--- a/applications/PCFieldSplit/CMakeLists.txt
+++ b/applications/PCFieldSplit/CMakeLists.txt
@@ -2,6 +2,7 @@ CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
 
 get_filename_component(APP_FOLDER_NAME_PARENT ${CMAKE_CURRENT_LIST_DIR} NAME)
 
+# Steady-state Boussinesq - BEGIN
 ADD_SUBDIRECTORY(ex1/)
 
 ADD_SUBDIRECTORY(ex10/)
@@ -11,6 +12,9 @@ ADD_SUBDIRECTORY(ex11_2/)
 ADD_SUBDIRECTORY(ex12/)
 ADD_SUBDIRECTORY(ex13/)
 ADD_SUBDIRECTORY(ex14/)
+# Steady-state Boussinesq - END
+
+
 
 # Time dependent - BEGIN
 ADD_SUBDIRECTORY(ex20_1/)
@@ -25,20 +29,31 @@ ADD_SUBDIRECTORY(ex25/)
 # Time dependent - END
 
 
-ADD_SUBDIRECTORY(ex30_opt_control/)
 
-ADD_SUBDIRECTORY(ex40/)
+# Poisson - BEGIN
+ADD_SUBDIRECTORY(ex40_1/)
+ADD_SUBDIRECTORY(ex40_2/)
 ADD_SUBDIRECTORY(ex41/)
 ADD_SUBDIRECTORY(ex42/)
 ADD_SUBDIRECTORY(ex43/)
+# Poisson - END
+
+# Steady-state Boussinesq - BEGIN
 ADD_SUBDIRECTORY(ex44/)
 ADD_SUBDIRECTORY(ex45/)
 ADD_SUBDIRECTORY(ex46/)
+# Steady-state Boussinesq - END
+
+
+# Steady-state MHD - BEGIN
+ADD_SUBDIRECTORY(ex50/)
+ADD_SUBDIRECTORY(ex50_1/)
+# Steady-state MHD - END
+
 
 ADD_SUBDIRECTORY(ex_ns_pcd/)
 
-ADD_SUBDIRECTORY(ex50/)
-ADD_SUBDIRECTORY(ex50_1/)
+
+ADD_SUBDIRECTORY(ex30_opt_control/)
 
 
-ADD_SUBDIRECTORY(ex61/)
